# NEEDLE

./: .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GRAPH_REPORT.md  LICENSE  README.md  SETUP.md  graph.html  railway.toml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
benches/: bm25_bench.rs  embedding_bench.rs  hnsw_bench.rs
design/: README.md
design/needle-web-ui/: .thumbnail  Needle Web UI.dc.html
docs/: 01_PRD.md  02_TECH_STACK_AND_FLOWS.md  03_SCHEMA.md  04_DESIGN.md
needle-vscode/: .vscodeignore  package-lock.json  package.json
needle-vscode/src/: extension.ts  graphPanel.ts  searchView.ts
src/: config.rs  error.rs  lib.rs  llm.rs  main.rs  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/analysis/: churn.rs  mod.rs  security.rs
src/assets/: graph_template.html  ui.html
src/chunking/: code.rs  mod.rs  prose.rs
src/cli/: bench.rs  config.rs  graph.rs  init.rs  mcp.rs  mod.rs  reindex.rs  report.rs  search.rs  serve.rs  status.rs  watch.rs
src/cli/mcp/: mod.rs  tools_graph.rs  tools_search.rs
src/cli/serve/: handlers_core.rs  handlers_import.rs  mod.rs
src/embedding/: mod.rs
src/graph/: extract_java_cpp.rs  extract_rs_go.rs  extract_scripting.rs  mod.rs
src/indexing/: bm25.rs  hnsw.rs  mod.rs
src/query/: fusion.rs  mod.rs
src/server/: index_pipeline.rs  indexer.rs  mod.rs  oauth.rs  users.rs
src/storage/: mod.rs
src/watcher/: mod.rs
